<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.sam.dbus.DashBoard"
    android:background="@color/white"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/ll_dashboard">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/db_imagebtn_busroute"
            android:src="@drawable/busroute"
            android:background="@null"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/busroute"
            android:id="@+id/db_tv_busroute"
            android:layout_marginLeft="15sp"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/try_imgbtn"
            android:src="@drawable/pickuppoint"
            android:background="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ppoints"
            android:id="@+id/db_tv_ppoints"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="5sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/db_imagebtn_driverinfo"
            android:src="@drawable/driverinfo"
            android:background="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/driverinfo"
            android:id="@+id/db_tv_driverinfo"
            android:layout_marginLeft="20sp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
